добавил скрипты, модалки, стили к модалкам

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -38,7 +38,7 @@
           <br />
           Aliquam erat volutpat. Aenean accumsan.
         </p>
-        <button type="button" class="about__read-more-btn button--read-more">Read more ></button>
+        <button type="button" class="button--read-more">Read more    ></button>
       </article>
     </div>
   </div>
