--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -10,7 +10,7 @@
         </svg>
       </button>
       <nav class="menu__nav">
-        <button class="menu__button" type="button">Buy now</button>
+        <button class="hero-button--buy-now " type="button" modal--buynow-open>Buy now    ></button>
         <ul class="menu list">
           <li class="menu__item"><a class="menu__link link" href="">Home</a></li>
           <li class="menu__item"><a class="menu__link link" href="">About us</a></li>
