--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,3 +18,6 @@
 @import './layout/contacts';
 @import './layout/footer';
 @import './layout/buttons';
+@import './layout/modal-buynow';
+@import './layout/modal-ourlocation';
+@import './layout/modal-franchise';
